# Entropic-Leggett-Garg-Inequalities

./: .gitignore  README.md  demo.ipynb  intro.txt  pyproject.toml  requirements.txt
bloch4spin/: __init__.py  basis.py  engine.py  evolution.py  observable.py  requirements.txt
data/: 3-point-LGIs-a-1000.npz  3-point-LGIs-a.npz  3-point-LGIs-b-1000.npz  4-point-LGIs-c-1000.npz
lgbloch/: __init__.py  engine.py  lgi.py  viz.py
